# yoitsus

./: .envexample  Cargo.toml  JustFile  README.md
src/: main.rs
src/commands/: help.rs  mod.rs
src/commands/music/: add.rs  common.rs  funts.rs  helpers.rs  mod.rs
